--- a/initial-styles.css
+++ b/initial-styles.css
@@ -1,7 +1,3 @@
-.site-header {
-    margin: 0;
-}
-
 body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -9,7 +5,7 @@ body {
   background-color: #fdfdfd;
 
   min-height: 100vh;
-  background: linear-gradient(to bottom, rgb(255, 226, 95), black), black;
+  background: linear-gradient(to bottom, gray, black), black;
   background-repeat: no-repeat;
   background-size: 100% 90%, 100% 10%;
   background-position: top, bottom;
