--- a/2-hannah-styles.css
+++ b/2-hannah-styles.css
@@ -81,30 +81,32 @@ body {
 
 
 .image-row-1 {
-  margin-top: 50px;
   display: flex;
-  justify-content: flex-end; 
+  flex-direction: row-reverse; /* flips order */
   align-items: center;
   gap: 20px;
-  margin-right: 80px;
+  margin-top: 50px;
+  margin-left: 80px; /* adjust margins since flipped */
 }
 
 .image-row-2 {
   display: flex;
-  justify-content: flex-start;
+  flex-direction: row-reverse; /* flips order */
   align-items: center;
   gap: 20px;
   margin-left: 80px;
 }
 
+
 .image-row-3 {
-  margin-bottom: 50px;
   display: flex;
-  justify-content: flex-end; 
+  flex-direction: row-reverse; /* flips order */
   align-items: center;
   gap: 20px;
-  margin-right: 80px;
+  margin-bottom: 50px;
+  margin-left: 80px;
 }
+
 
 .image-row img {
   width: 350px;
@@ -117,7 +119,7 @@ body {
 .text-block {
   max-width: 500px;
   color: white;
-  text-align: center; /* centers h2 and p together */
+  text-align: center; 
   margin-left: 200px;
   margin-right: 200px;
 }
