--- a/2-billie-styles.css
+++ b/2-billie-styles.css
@@ -1,11 +1,6 @@
-.site-header {
-    margin: 0;
-}
-
 body {
   font-family: Arial, sans-serif;
   margin: 0;
-  padding: 0;
   background-color: #fdfdfd;
 
   min-height: 100vh;
@@ -14,6 +9,8 @@ body {
   background-size: 100% 90%, 100% 10%;
   background-position: top, bottom;
 }
+
+
 
 .wrapper {
   text-align: center;
@@ -40,12 +37,17 @@ body {
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
 }
 
+
+
 .site-header {
+  margin: 0;
   background-color: #333;
   color: white;
   padding: 10px 0;
   text-align: center;
 }
+
+
 
 .navigation {
   background-color: #444;
@@ -76,14 +78,69 @@ body {
   border-radius: 4px;
 }
 
-.image-row {
+
+
+.image-row-1 {
   display: flex;
-  justify-content: center;
-  gap: 40px;
-  margin-top: 20px;
+  flex-direction: row-reverse; 
+  align-items: center;
+  gap: 20px;
+  margin-top: 50px;
+  margin-left: 80px;
 }
 
+.image-row-2 {
+  display: flex;
+  flex-direction: row-reverse; 
+  align-items: center;
+  gap: 20px;
+  margin-left: 80px;
+}
+
+
+.image-row-3 {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 50px;
+  margin-left: 80px;
+}
+
+
+.image-row {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin: 50px 80px;
+}
+
+
 .image-row img {
-  width: 275px;
+  width: 350px;
   height: auto;
+  flex-shrink: 0
+}
+
+
+
+.text-block {
+  max-width: 500px;
+  color: white;
+  text-align: center;
+  margin-left: 200px;
+  margin-right: 200px;
+}
+
+
+.text-block h2 {
+  margin-top: 0;
+  font-size: 2em;
+  font-family: '', Arial, Helvetica, sans-serif;
+}
+
+.text-block p {
+  line-height: 1.8;
+  font-size: 1.2em; 
+  font-family: 'Verdana', sans-serif; 
 }
