--- a/1-billie-styles.css
+++ b/1-billie-styles.css
@@ -90,15 +90,16 @@ body {
 }
 
 .image-row-2 {
+  margin-bottom: 50px;
   display: flex;
-  justify-content: flex-start;
+  justify-content: flex-end; 
   align-items: center;
   gap: 20px;
-  margin-left: 80px;
+  margin-right: 80px;
 }
 
 .image-row-3 {
-  margin-bottom: 50px;
+  margin-top: 50px;
   display: flex;
   justify-content: flex-end; 
   align-items: center;
