--- a/2-billie-styles.css
+++ b/2-billie-styles.css
@@ -89,21 +89,13 @@ body {
   margin-left: 80px;
 }
 
+
 .image-row-2 {
   display: flex;
   flex-direction: row-reverse; 
   align-items: center;
   gap: 20px;
-  margin-left: 80px;
-}
-
-
-.image-row-3 {
-  display: flex;
-  flex-direction: row-reverse;
-  align-items: center;
-  gap: 20px;
-  margin-bottom: 50px;
+  margin-top: 50px;
   margin-left: 80px;
 }
 
