--- a/4-fuji-styles.css
+++ b/4-fuji-styles.css
@@ -89,22 +89,14 @@ body {
   margin-left: 80px;
 }
 
-.image-row-2 {
-  display: flex;
-  flex-direction: row-reverse; 
-  align-items: center;
-  gap: 20px;
-  margin-left: 80px;
-}
-
 
 .image-row-3 {
+  margin-bottom: 50px;
   display: flex;
-  flex-direction: row-reverse;
+  justify-content: flex-end; 
   align-items: center;
   gap: 20px;
-  margin-bottom: 50px;
-  margin-left: 80px;
+  margin-right: 80px;
 }
 
 
